traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:22: error: ';' expected but 'else' found.
    else gauche();avance();gauche()
    ^